# XTDDFT

./: .gitignore  README.md  TDA.py  UKS_HSE_streaming_jk_diagnostics.py  UKS_HSE_streaming_scf.py  UTDA.py  XTDA.py  __init__.py  pyproject.toml  requirements-gpu.txt  requirements.txt  streaming_pbc_df_jk.py  x_tda.py
SF_TDA/: SF-XTDA.py  SF_TDA.py  SF_XTDA.py  SF_XTDA_GPU.py  sf_tda.py  sf_xtda.py  test_mc_sftda.py
XTDDFT/: base.py  df_cderi_cache.py  hxc_part.py  pbc_cderi_outcore.py  sf_tda_up.py  streaming_pbc_df_jk.py  symmetry.py  xsf_tda_down.py  xtda.py
deriv/TDA/: UCIS.py
deriv/grad/: usfcis-rohf.py  (+5 more)
example/: Be.ipynb  O2.ipynb  SF-XTDA.ipynb  TDA.ipynb  XSF-TDA.ipynb  XSF_TDA.ipynb  sTDA.ipynb
experientment/: calc_homo_lumo_cubes_from_chk.py  calc_utda_nto_from_saved_states.py  calc_xsf_emission_from_saved_states.py  calc_xsf_nto_from_saved_states.py  calc_xsf_nto_from_saved_states_mol.py  calc_xsf_nto_mcol_sa3_pairs_pbc.py  calc_xsf_nto_mol_sa3_pairs.py  calc_xtda_nto_mol_ground_pairs.py  calc_xtda_nto_pbc_ground_pairs.py  pbc_chk_to_molden.py  run_usf_tda_down_pbc_gpu_from_chk.py  run_utda_pbc_gpu_from_chk.py  run_xsf_tda_down_pbc_gpu_from_chk.py  run_xsf_tda_down_roks_smd_toluene_from_chk.py  run_xtda_pbc_gpu_from_chk.py
experiment/: __init__.py  symmetry_grid.py
sTDA/: TDA.py  UTDA.py  UsTDAopt.py  UsTDAopt2.py  XTDA.py  XsTDAopt.py  XsTDAopt2.py  analyze_data.ipynb  os-sTDA.py  plot.ipynb  sTDAopt.py  tools.py
test/: TDA.ipynb  plot.ipynb  sTDA.ipynb  spin up.ipynb
tests/: test_davidson_init_space.py  test_df_cderi_cache.py  test_gpu4pyscf_pbc_c_solid_gdf.py  test_gpu4pyscf_pbc_gdf.py  test_homo_lumo_cube_script.py  test_roks_smd_xsf_script.py  test_sf_tda_up_nto.py  test_streaming_pbc_df_jk.py  test_symmetry_analysis.py  test_utda_nto_script.py  test_visualize.py  test_xsf_nto_mcol_pairs_script.py  test_xsf_nto_mol_pairs_script.py  test_xsf_nto_script.py  test_xsf_tda_down_cpu_simple_script.py  test_xsf_tda_down_delta_s2.py  test_xtda_nto_ground_pairs_scripts.py  test_xtda_tensor_basis.py
utils/: Davidson.py  __init__.py  atom.py  backend.py  df_cderi_cache.py  hxc_part.py  pbc_cderi_outcore.py  streaming_pbc_df_jk.py  symmetry.py  unit.py  utils.py  visualize.py
x2c_hamiltonian/: sfX2C_soDKH1.py  sfX2C_zeeman.py  test.py  test_BP1eSOC.py  test_SOCSI.py  test_SOCSI_d.py  test_SOCSI_s.py  test_zeeman.py
xtddft/: SF_TDA.py  SF_TDA_pbc.py  SF_TDA_pbc_GPU.py  TDA.py  UTDA.py  XSF_TDA.py  XSF_TDA_GPU.py  XSF_TDA_pbc.py  XSF_TDA_pbc_GPU.py  XTDA.py  XTDA_GPU.py
(+64 files in other folders)
