[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xtddft_dev"
version = "0.1.0"
description = "Spin-adapted time-dependent density functional theory for open-shell systems"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "XTDDFT developers" },
]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "pyscf",
  "h5py",
  "joblib",
  "opt_einsum",
  "psutil",
  "spglib",
  "libmsym",
]

[project.optional-dependencies]
gpu = [
  "cupy",
  "gpu4pyscf",
]
gpu-cuda11x = [
  "cupy-cuda11x",
  "gpu4pyscf",
]
gpu-cuda12x = [
  "cupy-cuda12x",
  "gpu4pyscf",
]

[tool.setuptools]
include-package-data = true
packages = ["XTDDFT_dev", "XTDDFT_dev.XTDDFT", "XTDDFT_dev.utils", "XTDDFT_dev.experiment"]

[tool.setuptools.package-dir]
"XTDDFT_dev" = "."
"XTDDFT_dev.XTDDFT" = "XTDDFT"
"XTDDFT_dev.utils" = "utils"
"XTDDFT_dev.experiment" = "experiment"
